edited css link

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     ></script>
 
     <!-- Local CSS -->
-    <link rel="stylesheet" href="/src/style.css" />
+    <link rel="stylesheet" href="src/style.css" />
     <title>Backgammon</title>
   </head>
   <body>
